# PHP-Embedded

./: CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
docker/: build.sh  download.sh  make.sh
docker/linux/: build.sh
docker/linux/debian/: Dockerfile
docker/phpe-debian/: Dockerfile
docker/windows/: build.ps1
docker/windows/ltsc2022/: Dockerfile
src/: main.c  main.php
